# cg-internship-test

./: CMakeLists.txt  README.md  build-vs16.bat
src/: main.cc
